<resources>
    <string name="app_name">Quinbay Ecommerce</string>
    <string name="login">Login</string>
    <string name="wishlist">Wishlist</string>
    <string name="search">Search</string>
    <string name="user_login">User Login</string>
    <string name="user_name">Email</string>
    <string name="user_password">Password</string>
    <string name="quinbay_ecommerce">Quinbay\nEcommerce\nUser</string>
    <string name="google">Google</string>
    <string name="no_account_yet">No account yet ?</string>
    <string name="register">User Register</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="merchant">Merchant</string>
    <string name="register_merchant">"Merchant Register "</string>
    <string name="quinbay_ecommerce_seller">Quinbay\nEcommerce\nSeller</string>
    <string name="wish_list">Wishlist</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_strike_price">Product Strike Price</string>
    <string name="add_to_bag">View Details</string>
    <string name="product_descrption">Product Description</string>
    <string name="product_brand">Product Brand</string>
    <string name="product_category">Product Category</string>

    <string name="ip_address">10.20.3.153:8769</string>
    <string name="email_hint">Type email address</string>
<!--    <string name="email">Email</string>-->
    <string name="password">Password</string>
    <string name="Password_hint">Type your password</string>
</resources>