<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/padding_4"
        android:layout_weight="0.9"
        android:layout_margin="@dimen/padding_4">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">
            <ImageView
                android:id="@+id/im_product"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_launcher_background"
                android:layout_weight="0.4" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.6"
                android:layout_margin="@dimen/padding_4">
                <TextView
                    android:id="@+id/tv_product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tv_product_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_price"
                    android:textColor="@color/discount_price"/>
                <!--                <TextView-->
                <!--                    android:id="@+id/tv_product_strike_price"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:text="@string/product_strike_price"-->
                <!--                    android:autoText="true"/>-->
                <Button
                    android:id="@+id/btn_view_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_to_bag"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/quinbay_color"
                    android:layout_gravity="bottom"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <ProgressBar
        android:id="@+id/progress_bar_item_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_weight="0.1"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>