<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/quinbay_color"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/et_search_term"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:hint="@string/search"
                    android:imeOptions="actionSearch"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_merchant"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:text="@string/merchant"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_cart"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15"
                    android:gravity="center"
                    android:text="Cart"
                    android:textColor="@color/white" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <!--    <ScrollView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        >
      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/relative_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent">
        <!-- viewpager to show images -->
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPagerMain"
            android:layout_width="match_parent"
            android:layout_height="300dp" />
    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerVertical="true"
        android:scaleType="centerCrop"
        android:src="@drawable/music_category"
        app:civ_border_color="@color/white"
        app:civ_border_width="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/img4"
        app:layout_constraintTop_toBottomOf="@+id/img3" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerVertical="true"
        android:scaleType="centerCrop"
        android:src="@drawable/laptop_category"
        app:civ_border_color="@color/white"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img3"
        app:layout_constraintTop_toBottomOf="@+id/relative_Layout" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerVertical="true"
        android:scaleType="centerCrop"
        android:src="@drawable/tv_category"
        app:civ_border_color="@color/white"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toStartOf="@+id/img2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative_Layout" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img4"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerVertical="true"
        android:scaleType="centerCrop"
        android:src="@drawable/watches_category"
        app:civ_border_color="@color/white"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintStart_toEndOf="@+id/img1"
        app:layout_constraintTop_toBottomOf="@id/img2" />

          <de.hdodenhof.circleimageview.CircleImageView
              android:id="@+id/img5"
              android:layout_width="200dp"
              android:layout_height="200dp"
              android:layout_centerVertical="true"
              android:scaleType="centerCrop"
              android:src="@drawable/phone_category"
              app:civ_border_color="@color/white"
              app:civ_border_width="1dp"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/img4" />
      </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
<!--</ScrollView>-->